modules/vpc/vpc.tf
resource "aws_vpc" "this_vpc" {
  cidr_block = var.this_vpc_cidr_block // "12.11.0.0/16"
  tags = {
    Name = var.this_vpc_tags // "this_vpc"
  }
}

resource "aws_subnet" "this_subnet_pub" {
  vpc_id                  = aws_vpc.this_vpc.id  
  availability_zone       = "us-east-1a"
  cidr_block              = var.this_subnet_pub_cidr_block // "12.11.0.0/17"
  map_public_ip_on_launch = var.this_subnet_pub_map_ip // true
  tags = {
    Name = var.this_subnet_pub_tags // "pub_subnet"
  }
}

resource "aws_subnet" "this_subnet_private1" {
  vpc_id                  = aws_vpc.this_vpc.id
  availability_zone       = "us-east-1a"
  cidr_block              = var.this_subnet_private1_cidr_block // "12.11.128.0/19"
  map_public_ip_on_launch = var.this_subnet_private_map_ip // false
  tags = {
    Name = var.this_subnet_private1_tags // "pri_subnet1"
  }
}

resource "aws_subnet" "this_subnet_private2" {
  vpc_id                  = aws_vpc.this_vpc.id
  availability_zone       = "us-east-1a"
  cidr_block              = var.this_subnet_private2_cidr_block // "12.11.192.0/20"
  map_public_ip_on_launch = var.this_subnet_private_map_ip // false
  tags = {
    Name = var.this_subnet_private2_tags // "pri_subnet2"
  }
}

resource "aws_internet_gateway" "this_igw" {
  vpc_id = aws_vpc.this_vpc.id
  tags = {
    Name = var.this_igw_tags
  }
}

resource "aws_route_table" "this_route_table" {
  vpc_id = aws_vpc.this_vpc.id

  route {
    cidr_block = var.this_def_Route_example_cidr_block // "0.0.0.0/0"
    gateway_id = aws_internet_gateway.this_igw.id
  }

  tags = {
    Name = var.this_def_Route_example_tag // "default"
  }
}

resource "aws_route_table_association" "this_rw_association" {
  subnet_id      = aws_subnet.this_subnet_pub.id
  route_table_id = aws_route_table.this_route_table.id
}



resource "aws_security_group" "this_sg" {
  vpc_id = aws_vpc.this_vpc.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "TCP"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "TCP"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "TCP"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 3306
    to_port     = 3306
    protocol    = "TCP"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }



}
